# rust-repository-pattern

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/adapters/baserepository/: Cargo.toml
crates/adapters/baserepository/src/: lib.rs
crates/adapters/mongo/: Cargo.toml
crates/adapters/mongo/src/: filter.rs  lib.rs  uow.rs
crates/adapters/postgres/: Cargo.toml
crates/adapters/postgres/src/: lib.rs  repo.rs  uow.rs
crates/core-config/: Cargo.toml
crates/core-config/src/: lib.rs
crates/core-db/: Cargo.toml
crates/core-db/src/: factory.rs  lib.rs  migrations.rs  unit_of_work.rs
crates/modules/users/: Cargo.toml
crates/modules/users/src/: lib.rs  mod.rs
crates/modules/users/src/constants/: errors.rs
crates/modules/users/src/delivery/http/: handler.rs  router.rs
crates/modules/users/src/delivery/http/dto/: mod.rs
crates/modules/users/src/domain/entities/: user.rs
crates/modules/users/src/repositories/: interface.rs  migration.rs  mod.rs  repository.rs
crates/modules/users/src/service/: interface.rs  service.rs
crates/modules/users/src/types/: mod.rs
crates/pkg/: Cargo.toml
crates/pkg/src/: errors.rs  lib.rs  logging.rs  types.rs
crates/pkg/src/utils/: datetime_utils.rs  mod.rs  string_utils.rs  validation.rs
deployment/: Dockerfile  docker-compose.yml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/base_repository/: mod.rs
src/internal/: mod.rs
src/internal/composition/: contracts.rs  mod.rs  module_registry.rs  root.rs
src/internal/core/: mod.rs
src/internal/core/config/: mod.rs
src/internal/core/database/: mod.rs
src/internal/modules/: mod.rs
src/internal/modules/users/delivery/http/: handler.rs  mod.rs  router.rs
src/internal/modules/users/delivery/http/dto/: mod.rs
src/internal/modules/users/domain/entities/: user.rs
src/internal/modules/users/repositories/: interface.rs  mod.rs  repository.rs
src/internal/modules/users/service/: interface.rs  mod.rs  service.rs
src/internal/shared/: base_dtos.rs  database_service.rs  mod.rs  utils.rs
src/internal/shared/exceptions/: mod.rs
src/pkg/: mod.rs
src/pkg/config/: mod.rs
src/pkg/errors/: mod.rs
src/pkg/response/: mod.rs
src/pkg/validator/: mod.rs
