[package]
name = "repository-pattern"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "migrate", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"

# HTTP Server (Echo-like framework)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation (similar to ozzo-validation/class-validator)
validator = { version = "0.18", features = ["derive"] }
