[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# HTTP Server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Types
uuid.workspace = true

# Configuration
dotenvy.workspace = true

# Internal workspace dependencies
pkg = { workspace = true }
core-config = { workspace = true }
core-db = { workspace = true }
baserepository = { workspace = true }
postgres-adapter = { workspace = true }
users-module = { workspace = true }

[features]
default = []
