[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]

tokio.workspace = true
async-trait.workspace = true


axum.workspace = true
tower.workspace = true
tower-http.workspace = true


tracing.workspace = true
tracing-subscriber.workspace = true


uuid.workspace = true


dotenvy.workspace = true


pkg = { workspace = true }
core-config = { workspace = true }
core-db = { workspace = true }
baserepository = { workspace = true }
postgres-adapter = { workspace = true }
users-module = { workspace = true }

[features]
default = []
