[package]
name = "core-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Internal workspace dependencies
pkg = { workspace = true }
core-config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
