[package]
name = "pkg"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
validator.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
async-trait.workspace = true
